# Server_IOB

./: .gitignore
Server_IOB/: CMakeLists.txt  LICENSE.txt  README.md  Server_IOB.VC.db  Server_IOB.sln  Server_IOB.vcxproj  Server_IOB.vcxproj.filters  client.cpp  client.h  knownClientList.xml  server_iob.cpp  server_iob.h  server_iob.qrc
Server_IOB/GeneratedFiles/: qrc_server_iob.cpp  ui_server_iob.h
Server_IOB/src/: CMakeLists.txt  client.cpp  client.h  main.cpp  server_iob.cpp  server_iob.h  server_iob.ui
